# loreforge

./: .gitattributes  .gitignore  LICENSE  Loreforge.html  README.md
.github/workflows/: build.yml
loreforge-app/: .gitignore  BUILD.md  sync-ui.ps1
loreforge-app/src-tauri/: Cargo.toml  tauri.conf.json
loreforge-app/src-tauri/capabilities/: default.json
loreforge-app/src-tauri/icons/: icon.icns
loreforge-app/src-tauri/src/: main.rs
